# deepresearch

./: .env.example  .gitignore  AGENTS.md  README.md  README.zh-CN.md  config.example.toml  docker-compose.milvus.yml  pyproject.toml
docs/: CONFIGURATION.md  EVALUATION_LANGFUSE_PLAN.md  IMPLEMENTATION_PLAN.md  MVP_ACCEPTANCE.md  MVP_AND_ROADMAP.md  POST_MVP_ROADMAP.md  PRD.md  PROJECT_STATUS.md  QUANTITATIVE_CLAIMS.md  README.md  REAL_BENCHMARK_GUIDE.md  RELEASE_HARDENING.md  RETRIEVAL_DESIGN.md  ROADMAP.md  TASKS.md  TECH_STACK.md  WORKLOG.md
docs/archive/: IDEAS.md  IMPLEMENTATION_PLAN.md  MVP_AND_ROADMAP.md  POST_MVP_ROADMAP.md  README.md
docs/examples/: README.md  sample-evaluation.json  sample-report.md
examples/bench/: crosslingual_smoke10.jsonl  crosslingual_smoke3.jsonl  hotpotqa_deepresearch.jsonl  manifest.json  multilingual_large20.jsonl  researchbench_full.jsonl  researchbench_mini.jsonl  researchbench_smoke5.jsonl
examples/configs/: benchmark_smoke.toml
examples/corpus/: embeddings_dense_vectors.md  embeddings_semantic_meaning.md  embeddings_transformer_vs_tfidf.md  fine_tuning_adapters.md  fine_tuning_lora.md  fine_tuning_peft.md  llm_agent_trends.md  rag_dense_retrieval.md  rag_hybrid_search_rrf.md  rag_overview.md  rag_sparse_retrieval.md  reasoning_chain_of_thought.md  reasoning_few_shot_cot.md  reasoning_self_consistency.md  tool_use_function_calling.md  tool_use_react.md  tool_use_toolformer.md
examples/experiments/: README.md  quantification.py
tests/: test_cli.py  test_config.py  test_doctor.py  test_imports.py
tests/core/: test_dag.py  (+8 more)
(+190 files in other folders)
